Change padding to margin to fix layout problem

--- a/src/app/views/querying/gis/components/layers/map-layers.component.scss
+++ b/src/app/views/querying/gis/components/layers/map-layers.component.scss
@@ -3,7 +3,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    margin: 1rem;
     grid-gap: 1rem;
 
     max-height: 100%;
